<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/cargar"
            android:title="@string/cargar" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/lista"
            android:title="@string/listar" />
        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/map"
            android:title="@string/mapa" />
        <item
            android:id="@+id/busquedaFragment"
            android:icon="@drawable/buscar"
            android:title="@string/b_squeda" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/salir"
            android:title="@string/salir" />
    </group>
</menu>